--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="scroll-smooth scroll-pt-[90px] md:scroll-pt-[121px] antialiased">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" href="/favicon.svg" />
+		<link rel="icon" href="https://brunosilva.app/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Salient</title>
 
